--- a/phoenix-channels.org
+++ b/phoenix-channels.org
@@ -3,13 +3,43 @@
 #+TITLE: channels
 #+AUTHOR: alan.ficagna@deepx.it
 #+OPTIONS: timestamp:nil toc:nil
+#+REVEAL_EXTRA_CSS: phoenix-channels.css
+
 
 * Brace yourselves for the conceptual dump
 
 https://vignette.wikia.nocookie.net/dragonball/images/f/f9/Brace-yourself-the-brace-yourself-memes-are-coming.jpg
 
-** Server/Client ~ Publisher/Subscribe
+** Traditional HTTP/S [[https://pixlanim8r.files.wordpress.com/2014/03/vs_6.png]] Channels
 
+   #+ATTR_REVEAL: :frag (roll-in) :frag-idx (-)
+   * Allows only one to one communication
+   * No way for the server to initiate a conversation
+   * Updates/notifications have high latency
+   * Streaming is very weird.
 
+* Walk through
 
-** Broadcasting
+** Install phoenix 1.3+ and begin a new project
+
+   #+BEGIN_SRC bash
+   # Assuming node is already installed
+   mix archive.install https://github.com/phoenixframework/archives/raw/master/phx_new.ez
+
+   mix phx.new elixir_meetup
+   #+END_SRC
+
+** Routing
+
+   Uncomment the following line:
+
+   #+BEGIN_SRC elixir
+   # @lib/elixir_meetup_web/channels/user_socket.ex
+   channel "room:*", ElixirMeetupWeb.RoomChannel
+   #+END_SRC
+
+   #+ATTR_REVEAL: :frag (roll-in) :frag-idx (-)
+   * Channel routes are not the same thing as regular routes
+   * ~room:*~ will route every request to ~RoomChannel~
+   * Your channel will be available at ~http://localhost:4000/socket/websocket/~
+   * You can customize this at ~lib/elixir_meetup_web/endpoint.ex~
