--- a/estimations.org
+++ b/estimations.org
@@ -29,10 +29,62 @@
   #+REVEAL_SLIDE_FOOTER:
   https://opensourceconnections.com/blog/2009/11/04/estimation-the-cone-of-uncertainty-vs-the-wormhole-of-reality/
 
-
 * Practical Advises
 
  #+ATTR_REVEAL: :frag (roll-in) :frag-idx (-)
  * Think probabilistically.
  * Make mental money bets.
  * Meta advises.
+
+* Think Probabilistically
+
+ #+ATTR_REVEAL: :frag (roll-in) :frag-idx (-)
+ * Probability models incomplete information.
+
+** Airplanes
+   https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Antonov_An-2_in_Vitebsk.jpg/440px-Antonov_An-2_in_Vitebsk.jpg
+
+#+REVEAL: split
+
+   [[./images/normal.png]]
+
+#+REVEAL: split
+
+   [[./images/normal_with_vline.png]]
+
+#+REVEAL: split
+
+   [[./images/normal_with_range.png]]
+
+* Make mental money bets.
+
+ #+ATTR_REVEAL: :frag (roll-in) :frag-idx (-)
+ * Increase the interval until it is meaningful.
+ * Reduce interval until you are comfortable making a money bet.
+
+#+REVEAL: split
+
+   #+REVEAL_HTML: <img style="height:50vh" src="./images/howtomeasure.jpeg">
+
+* Meta Advises
+
+ #+ATTR_REVEAL: :frag (roll-in) :frag-idx (-)
+ * People hate math
+ * Use these advises as a internal model rather than explicitly.
+
+#+REVEAL: split
+
+  The Tao Of Programming, Book 5, Maintenance (Geoffrey James, 1987):
+
+  A manager asked a programmer how long it would take him to finish the program on which he was working. “It will be finished tomorrow,” the programmer promptly replied.
+
+  “I think you are being unrealistic,” said the manager, “Truthfully, how long will it take?”
+
+  The programmer thought for a moment. “I have some features that I wish to add. This will take at least two weeks,” he finally said.
+
+  “Even that is too much to expect,” insisted the manager, “I will be satisfied if you simply tell me when the program is complete.”
+
+  The programmer agreed to this.
+
+#+REVEAL: split
+  Several years later, the manager retired. On the way to his retirement luncheon, he discovered the programmer asleep at his terminal. He had been programming all night.
